--- a/contact.html
+++ b/contact.html
@@ -154,6 +154,11 @@
                         </div>
                     </div>                      
                     <!--/Hero Section -->   
+
+                     <!-- Calendly inline widget begin -->
+                     <div class="calendly-inline-widget" data-url="https://calendly.com/tomujin-alternative-school/1hr?hide_gdpr_banner=1" style="min-width:320px;height:630px;"></div>
+                     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+                     <!-- Calendly inline widget end -->
                          
                     
                     <!-- Main Content -->
