--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HS6CPW1ELH"></script>
@@ -28,6 +29,15 @@
     <link href="style.css" rel="stylesheet" />
     <link href="css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet"> 
+
+    <link rel="alternate" hreflang="mn" href="https://tomujin.edu.mn">
+    <link rel="alternate" hreflang="en" href="https://en.tomujin.edu.mn">
+    <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+    <script>
+        Weglot.initialize({
+            api_key: 'wg_e06f9b9fee277b94478d15b85a08c24f8'
+        });
+    </script>
    
 </head>
 
@@ -1499,7 +1509,8 @@
     	<div class="hero-translate"></div>
     </div>
     <div id="rotate-device"></div>
-    
+
+   
     
 		
     <script src="js/jquery.min.js"></script>    
