--- a/elf-hutulbur.html
+++ b/elf-hutulbur.html
@@ -84,7 +84,8 @@
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="huwaari.html"><div class="before-span"><span data-hover="Хичээлүүд">Хичээлүүд </span></div></a></li> 
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="house-system.html"><div class="before-span"><span data-hover="Хүрээлэл">Хүрээлэл </span></div></a></li> 
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="elselt.html"><div class="before-span"><span data-hover="Элсэлт">Элсэлт</span></div></a></li> 
-                                    <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="meeting1.html"><div class="before-span"><span data-hover="Холбоо барих">Уулзалт товлох</span></div></a></li>
+                                    <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="                                   
+                                        "><div class="before-span"><span data-hover="Холбоо барих">Уулзалт товлох</span></div></a></li>
                                     <li class="link menu-timeline"><a class="ajax-link"  href="https://www.jotform.com/form/230170446156450"><div class="before-span"><span data-hover="Өргөдөл илгээх">Өргөдөл илгээх</span></div></a></li> 
 
 
