--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet"> 
 
     
+    <link rel="alternate" hreflang="mn" href="https://tomujin.edu.mn">
+    <link rel="alternate" hreflang="en" href="https://en.tomujin.edu.mn">
+    <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+    <script>
+        Weglot.initialize({
+            api_key: 'wg_6b65f33597e98dfbe01391bdc5aae35a5'
+        });
+    </script>
    
 </head>
 
