--- a/meeting1.html
+++ b/meeting1.html
@@ -85,7 +85,7 @@
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="house-system.html"><div class="before-span"><span data-hover="Хүрээлэл">Хүрээлэл </span></div></a></li> 
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="elselt.html"><div class="before-span"><span data-hover="Элсэлт">Элсэлт</span></div></a></li> 
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="contact.html"><div class="before-span"><span data-hover="Холбоо барих">Уулзалт товлох</span></div></a></li>
-                                    <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="https://www.jotform.com/form/230170446156450"><div class="before-span"><span data-hover="Өргөдөл илгээх">Өргөдөл илгээх</span></div></a></li> 
+                                    <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="https://form.jotform.com/231492354528459"><div class="before-span"><span data-hover="Өргөдөл илгээх">Өргөдөл илгээх</span></div></a></li> 
 
 
                                    
