--- a/qa.html
+++ b/qa.html
@@ -85,7 +85,7 @@
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="house-system.html"><div class="before-span"><span data-hover="Хүрээлэл">Хүрээлэл </span></div></a></li> 
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="elselt.html"><div class="before-span"><span data-hover="Элсэлт">Элсэлт</span></div></a></li> 
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="contact.html"><div class="before-span"><span data-hover="Холбоо барих">Холбоо барих</span></div></a></li> 
-                                    <li class="link menu-timeline"><a class="ajax-link" href="https://www.jotform.com/form/230170446156450"><div class="before-span"><span data-hover="Өргөдөл илгээх">Өргөдөл илгээх</span></div></a></li> 
+                                    <li class="link menu-timeline"><a class="ajax-link" href="https://form.jotform.com/231492354528459"><div class="before-span"><span data-hover="Өргөдөл илгээх">Өргөдөл илгээх</span></div></a></li> 
 
 
                                    
@@ -417,7 +417,7 @@
                                             <div class="clapat-button-wrap parallax-wrap hide-ball">
                                                 <div class="clapat-button parallax-element">
                                                     <div class="button-border rounded parallax-element-second">
-                                                        <a class="ajax-link" href="https://www.jotform.com/form/230170446156450" data-type="page-transition">
+                                                        <a class="ajax-link" href="https://form.jotform.com/231492354528459" data-type="page-transition">
                                                             <span data-hover="Өргөдөл илгээх">Алтернатив Сургуульд Элсэх
                                                             </span>
                                                          </a>
