--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="house-system.html"><div class="before-span"><span data-hover="Хүрээлэл">Хүрээлэл </span></div></a></li> 
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="elselt.html"><div class="before-span"><span data-hover="Элсэлт">Элсэлт</span></div></a></li> 
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="contact.html"><div class="before-span"><span data-hover="Уулзалт товлох">Холбоо барих</span></div></a></li> 
-                                    <li class="link menu-timeline"><a class="ajax-link" href="https://form.jotform.com/231492354528459"><div class="before-span"><span data-hover="Өргөдөл илгээх">Өргөдөл илгээх</span></div></a></li> 
+                                    <li class="link menu-timeline"><a class="ajax-link" href="https://join.tomujin.edu.mn/"><div class="before-span"><span data-hover="Өргөдөл илгээх">Өргөдөл илгээх</span></div></a></li> 
 
 
                                    
@@ -215,7 +215,7 @@
                                         <div class="clapat-button-wrap parallax-wrap hide-ball">
                                             <div class="clapat-button parallax-element">
                                                 <div class="button-border outline parallax-element-second">
-                                                    <a target="_blank" href="https://form.jotform.com/231492354528459">
+                                                    <a target="_blank" href="https://join.tomujin.edu.mn/">
                                                         <span data-hover="Өргөдөл илгээх
                                                         ">Өвөрмөц сургуульд элсэх</span>
                                                      </a>
@@ -611,7 +611,7 @@
                                                 <div class="clapat-button-wrap parallax-wrap hide-ball">
                                                     <div class="clapat-button parallax-element">
                                                         <div class="button-border rounded parallax-element-second">
-                                                            <a target="_blank" href="https://form.jotform.com/231492354528459">
+                                                            <a target="_blank" href="https://join.tomujin.edu.mn/">
                                                                 <span data-hover="Өргөдөл илгээх"> Өвөрмөц сургуульд элсэх</span>
                                                              </a>
                                                         </div>
@@ -865,7 +865,7 @@
                                         <div class="clapat-button-wrap parallax-wrap hide-ball">
                                             <div class="clapat-button parallax-element">
                                                 <div class="button-border rounded parallax-element-second">
-                                                    <a class="ajax-link" href="https://form.jotform.com/231492354528459" data-type="page-transition">
+                                                    <a class="ajax-link" href="https://join.tomujin.edu.mn/" data-type="page-transition">
                                                         <span data-hover="Өргөдөл илгээх">Алтернатив Сургуульд Элсэх
                                                         </span>
                                                      </a>
@@ -1361,7 +1361,7 @@
                                             <div class="clapat-button-wrap parallax-wrap hide-ball">
                                                 <div class="clapat-button parallax-element">
                                                     <div class="button-border outline parallax-element-second">
-                                                        <a target="_blank" href="https://form.jotform.com/231492354528459">
+                                                        <a target="_blank" href="https://join.tomujin.edu.mn/">
                                                             <span data-hover="Өргөдөл илгээх
                                                             ">Өвөрмөц сургуульд элсэх</span>
                                                          </a>
