--- a/fin-aid.html
+++ b/fin-aid.html
@@ -85,7 +85,7 @@
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="house-system.html"><div class="before-span"><span data-hover="Хүрээлэл">Хүрээлэл </span></div></a></li> 
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="elselt.html"><div class="before-span"><span data-hover="Элсэлт">Элсэлт</span></div></a></li> 
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="contact.html"><div class="before-span"><span data-hover="Холбоо барих">Уулзалт товлох</span></div></a></li>
-                                    <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="https://form.jotform.com/231492354528459"><div class="before-span"><span data-hover="Өргөдөл илгээх">Өргөдөл илгээх</span></div></a></li> 
+                                    <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="https://join.tomujin.edu.mn/"><div class="before-span"><span data-hover="Өргөдөл илгээх">Өргөдөл илгээх</span></div></a></li> 
 
 
                                    
@@ -198,7 +198,7 @@
                                         <div class="clapat-button-wrap parallax-wrap hide-ball">
                                             <div class="clapat-button parallax-element">
                                                 <div class="button-border rounded parallax-element-second">
-                                                	<a target="_blank" href="https://form.jotform.com/231492354528459">
+                                                	<a target="_blank" href="https://join.tomujin.edu.mn/">
                                                     	<span data-hover="Өргөдөл илгээх"> Өвөрмөц сургуульд элсэх</span>
                                                      </a>
                                                 </div>
